add to index.html main.js script

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<h1>diff git test !!!</h1>
 	<div class="container">
 	</div>
+	
+	<script src="main.js" charset="utf-8"></script>
 
 </body>
 </html>
